objects/Timer_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Action_Type__c</fullName>
        <description>Shows the case workflow value if present else the Action Taken</description>
        <formula>IF(ISBLANK(TEXT(Case__r.Queue_Type__c)), 
  TEXT(Action__c), 
  IF(ISBLANK(TEXT(Case__r.Request_Category__c)), 
    TEXT(Case__r.Queue_Type__c),
    TEXT(Case__r.Queue_Type__c) &amp; &quot; - &quot; &amp; TEXT(Case__r.Request_Category__c)))</formula>
        <label>Action Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Break</fullName>
                </value>
                <value>
                    <fullName>Feedback</fullName>
                </value>
                <value>
                    <fullName>Follow Up</fullName>
                </value>
                <value>
                    <fullName>Frontline</fullName>
                </value>
                <value>
                    <fullName>Idle</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Special Project</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Walk-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calculated_Duration__c</fullName>
        <description>Returun the calculated duration in Seconds</description>
        <formula>IF(ISNULL(Duration__c),   (( EndTime__c - StartTime__c )* 24 * 60 * 60)  , Duration__c)</formula>
        <inlineHelpText>This is the total number of seconds calculated for this activity.</inlineHelpText>
        <label>Calculated Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Timer Entries</relationshipLabel>
        <relationshipName>Timer_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Count__c</fullName>
        <description>Set to 1 if the source should be counted</description>
        <formula>IF(
   OR(Source__c = &quot;Transfer Forward&quot;,
      Source__c = &quot;Tier 2&quot;,
      Source__c = &quot;Callout&quot;,
      Source__c = &quot;Future Process&quot;,
      Source__c = &quot;Case Closed&quot;
    ),
1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If = 1, then this timer entry counts towards case worked/ case not worked</inlineHelpText>
        <label>Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Time__c</fullName>
        <formula>IF(MOD(Calculated_Duration__c, 3600) / 60 &gt;= 10,
  TEXT(FLOOR(Calculated_Duration__c / 3600)) + &quot;:&quot;,
  TEXT(FLOOR(Calculated_Duration__c / 3600)) + &quot;:0&quot;)
&amp;
IF(MOD(MOD(Calculated_Duration__c,3600),60) &gt;= 10,
  TEXT(FLOOR(MOD(Calculated_Duration__c,3600)/60)) + &quot;:&quot;,
  TEXT(FLOOR(MOD(Calculated_Duration__c,3600)/60)) + &quot;:0&quot;)
&amp;
TEXT(FLOOR(MOD(MOD(Calculated_Duration__c,3600),60)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hours: Minutes: Seconds</inlineHelpText>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <inlineHelpText>This is the duration of the timed event in seconds</inlineHelpText>
        <label>Duration in Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <formula>User__r.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <description>when the event was stopped</description>
        <inlineHelpText>End of Activity</inlineHelpText>
        <label>EndTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Future_processing__c</fullName>
        <formula>Case__r.Future_Processing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Future processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Number</label>
        <referenceTo>RH_Order__c</referenceTo>
        <relationshipLabel>Timer Entries</relationshipLabel>
        <relationshipName>Timer_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source of the timer entry</description>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <description>Time the entry was started</description>
        <inlineHelpText>Start of Activity</inlineHelpText>
        <label>StartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Timer_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Timer Entry</label>
    <listViews>
        <fullName>All_Entries</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Action_Type__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Duration_Time__c</columns>
        <columns>Case__c</columns>
        <columns>Source__c</columns>
        <columns>Memo__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Credit_Count__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Entries</label>
    </listViews>
    <listViews>
        <fullName>CSC_Business_Administrators_Timer_Entry</fullName>
        <filterScope>Queue</filterScope>
        <label>CSC Business Administrators</label>
        <queue>CSC_Business_Administrators</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LoginEvent</fullName>
        <columns>User__c</columns>
        <columns>NAME</columns>
        <columns>Action_Type__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Duration_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Action_Type__c</field>
            <operation>equals</operation>
            <value>LoginEvent</value>
        </filters>
        <label>LoginEvent</label>
    </listViews>
    <listViews>
        <fullName>My_Time_Entries</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Action_Type__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Duration_Time__c</columns>
        <columns>Source__c</columns>
        <columns>Case__c</columns>
        <columns>Future_processing__c</columns>
        <columns>Memo__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Time Entries</label>
    </listViews>
    <listViews>
        <fullName>My_Timer_Entries_Today</fullName>
        <columns>NAME</columns>
        <columns>Credit_Count__c</columns>
        <columns>User__c</columns>
        <columns>Action_Type__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Duration_Time__c</columns>
        <columns>Source__c</columns>
        <columns>Case__c</columns>
        <columns>Future_processing__c</columns>
        <columns>Memo__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>My Timer Entries Today</label>
    </listViews>
    <listViews>
        <fullName>OP_Tracy_Helpers</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Action_Type__c</columns>
        <columns>Calculated_Duration__c</columns>
        <columns>Case__c</columns>
        <columns>Credit_Count__c</columns>
        <columns>StartTime__c</columns>
        <columns>User__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>David Bird,Miles Coltrell,Carolyn Burgueno,Roslyn Chandra,Jennifer Riveira</value>
        </filters>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Samantha Llyod,Ismael Lepe,Michelle Pinerodysarz</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>3/7/2016 12:00 AM</value>
        </filters>
        <label>OP Tracy Helpers</label>
        <sharedTo>
            <role>CSC_Frontline_Supervisor</role>
            <role>CSC_Tier_2_Supervisor</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Order_Processing_Helpers</fullName>
        <booleanFilter>1 or 2 or 3 or 4 or 5 or 6</booleanFilter>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Action_Type__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Duration_Time__c</columns>
        <columns>Case__c</columns>
        <columns>Source__c</columns>
        <columns>Memo__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Credit_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>,Nicole Stewart,Jesey Brewer,Shawn Stevens,Rhea Boyce,Martavion Napper</value>
        </filters>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Williette Bolton,Raven Wilson,Erneshia Strickland,Savannah Ballard</value>
        </filters>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Rhonda Smith,Quranica Courtney,Lori Fitzgerald,Patricia Cottle,Keilee Green</value>
        </filters>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Tawana Spiller,Patricia Neighbors,Ellen Gore,Amy Page,April Fowler</value>
        </filters>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Eva Taylor,Nia Shakir,Paulette Carter,Art Harrelson,Giang Huyhn</value>
        </filters>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Jasmine Jones,Rosalind Marable,Ricardo Mata,Lanna Power,Nicole Conley</value>
        </filters>
        <label>Order Processing - Helpers</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Order_Processing_Team</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Action_Type__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Duration_Time__c</columns>
        <columns>Case__c</columns>
        <columns>Source__c</columns>
        <columns>Memo__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Credit_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Julie Hernandez,Palmira Garcia,Linda Marshall,Beverly Rolle,Victor Hernandez</value>
        </filters>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Clifton Barber,Irasema Solis,Camille Martin,Carlos Vacio,Cynthia Rojas</value>
        </filters>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Jarrod Couch,Raquel Borrego</value>
        </filters>
        <label>Order Processing Team</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>my_time_entries_today</fullName>
        <columns>NAME</columns>
        <columns>Credit_Count__c</columns>
        <columns>User__c</columns>
        <columns>Action_Type__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Duration_Time__c</columns>
        <columns>Source__c</columns>
        <columns>Case__c</columns>
        <columns>Future_processing__c</columns>
        <columns>Memo__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>My time entries Today</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Timer Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timer Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Start_Time_Required</fullName>
        <active>true</active>
        <description>StartTime is required. We enforce it here rather than FLS or on the page layout to prevent most CSC profiles the ability to create Timer Entry records through the normal Salesforce UI. They can only createTimer Entry records via the timer.</description>
        <errorConditionFormula>ISBLANK(StartTime__c)</errorConditionFormula>
        <errorDisplayField>StartTime__c</errorDisplayField>
        <errorMessage>StartTime must have a value.</errorMessage>
    </validationRules>
</CustomObject>